<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.qla.activities.ApplicationModeChooserActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/choose_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_mode"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/detector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detector"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/reciver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiver"
                android:checked="false"/>
        </RadioGroup>

        <Button
            android:id="@+id/accept_device_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_device_mode" />
    </LinearLayout>

</RelativeLayout>
