<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.qla.activities.BurglaryReceiverActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="64dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reciver_ip_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_ip_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/reciver_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_ip_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/port_number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/port_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="4040" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synchronize_with_detector" />

    </LinearLayout>

</RelativeLayout>
